@@ -24,6 +24,11 @@ Note that:
 
 is legal.
 
+** `CDECLRC` environment variable
+If none of the `--config`, `-c`, `--no-config`, nor `-C` command line options
+are given and the value of the `CDECLRC` environment variable isn't empty, it's
+used as the full path to the cdeclrc file to read upon start-up.
+
 ** Types as objects
 Previously declared types are now checked to ensure they're not being used as
 objects
